# spectrum2

./: Dockerfile
backends/libcommuni/: CMakeLists.txt
backends/swiften/: CMakeLists.txt  main.cpp
backends/template/: CMakeLists.txt  main.cpp  plugin.cpp  plugin.h
backends/twitter/: CMakeLists.txt  TwitterPlugin.cpp  TwitterPlugin.h  main.cpp
include/Swiften/FileTransfer/: CombinedOutgoingFileTransferManager.h
include/transport/: NetworkPlugin.h
libtransport/: CMakeLists.txt
plugin/cpp/: CMakeLists.txt  networkplugin.cpp
tests/: CMakeLists.txt
